v0.1.23 (2018-05-19)
- add a parameter to STRM creation routine for: Download SRT and NFO when available. #46
- remove NFO and SRT from saving to cloud spreadsheet and STRM log
- implement: Download SRT and NFO when available. #46
- add subtitles and nfo files to media collection objects and assign these MEDIA_VIDEO_HELPER file type
- improvement: for downloadGeneralFile, move up the file check before the web call
- fix: strm creation not inserting 'http://' at the start #57
v0.1.22 (2018-05-18)
- implemented: Scheduling STRM support non-catalog structures #45
- testing: Scheduling STRM support non-catalog structures #45
- remove logging for favicon
- improvements for STRM creation - remove blank lines from log
- improvements for STRM creation - better logic around movie dates
- fix for catalogging disabling for STRM creation
- improvements for STRM creation - adding stripping for title/show name
- fix for missing STRM fields
- make "create Google Transcode" STRM files default to false
v0.1.20 (2018-05-12)
- fix: Can't get passthrough to work #55
- cleanup single STRM creation (removed unapplicable prompts from process for a single file): catalog strms to false stops transcoding AND original streams being created #53
- fix for folders (not single STRM): catalog strms to false stops transcoding AND original streams being created #53
- add manual whitelist ip
- should whitelist local public IP for ffprobe requests
v0.1.18 (2018-05-02)
- add logic to override passthrough with forced transcode quality selection by cookie
- add support to quality selection cookie
- implemented: Using cookies to set preferred resolution #31
- implemented: Add a feature to disable access unless authenticated in emby #41
- add IPV6 support for emby IP filtering
- adapt emby IP filtering for cloudflare support
v0.1.17 (2018-05-01)
- enable emby IP filtering
v0.1.16 (2018-04-20)
- fix: auto detect for pycrypto #49
- fix: Auto default quality #50
- fix: Python crypto not found #44